--- a/src/components/DatePicker.css
+++ b/src/components/DatePicker.css
@@ -40,6 +40,7 @@
 .date-picker-input.open {
   border-color: #3b82f6;
   box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+  text-align:right;
 }
 
 .date-picker-calendar {
